tests/ShouldFail/bad_intro.8pus
Theorem easyimpl : A -> A.
Proof.
    intro x.
    intro y.
Qed.